--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
     "motion": "^12.5.0",
-    "next": "14.2.15",
+    "next": "^14.2.26",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
@@ -48,7 +48,7 @@
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.3.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^5.8.0",
     "react-toastify": "^10.0.6",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.4",
