--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -32,27 +35,37 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.18.2",
     "fullcalendar": "^6.1.15",
+    "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
     "motion": "^12.5.0",
     "next": "^14.2.26",
+    "next-themes": "^0.4.6",
+    "radix-ui": "^1.1.3",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.55.0",
     "react-howler": "^5.2.0",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.3.0",
-    "react-syntax-highlighter": "^5.8.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.15.2",
     "remark-gfm": "^4.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
@@ -60,6 +73,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
     "@types/react-router-dom": "^5.3.3",
+    "@types/recharts": "^1.8.29",
     "daisyui": "^4.12.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
