--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@mozilla/readability": "^0.6.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -38,43 +39,52 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "eventsource-parser": "^1.1.2",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.18.2",
     "fullcalendar": "^6.1.15",
     "input-otp": "^1.4.2",
+    "jsdom": "^26.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
     "motion": "^12.5.0",
     "next": "^14.2.26",
     "next-themes": "^0.4.6",
+    "prism-react-renderer": "^2.4.1",
     "radix-ui": "^1.1.3",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
     "react-howler": "^5.2.0",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.3.0",
-    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^10.0.6",
     "recharts": "^2.15.2",
     "remark-gfm": "^4.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "together-ai": "^0.13.0",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
-    "xlsx": "^0.18.5"
+    "zod": "^3.24.2",
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
     "@types/react-router-dom": "^5.3.3",
     "@types/recharts": "^1.8.29",
+    "@types/uuid": "^10.0.0",
     "daisyui": "^4.12.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
