--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "together-ai": "^0.13.0",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2",
     "zod-to-json-schema": "^3.24.5"
   },
@@ -85,6 +86,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
+    "@types/xlsx": "^0.0.35",
     "daisyui": "^4.12.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
