--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -54,6 +55,7 @@
     "radix-ui": "^1.1.3",
     "react": "^18",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.55.0",
